@@ -2,7 +2,7 @@
 #
 # splashbox-daemon
 #
-# Copyright (c) 2010 - The OpenSplash Team
+# Copyright (c) 2010-2011  The OpenSplash Team
 # http://www.opensplash-project.org/
 #
 # This program is free software; you can redistribute it and/or modify
@@ -22,40 +22,14 @@ use strict;
 use warnings;
 use Proc::Daemon;
 use Proc::PID::File;
-use XML::Simple;
-use Data::Dumper;
+use Net::DBus;
+use Net::DBus::Reactor;
+use DBus::Trigger;
+use SplashBox;
+use SplashBox::Job::Trigger;
 
-use Cwd 'abs_path';
-my $ABS_PATH = abs_path($0);
-$ABS_PATH =~ s#(.*/).*#$1#;
-
-
-my $DIR_XML = '/tmp/splashbox';
-my $BOT_PATH = $ABS_PATH . '../action/';
-my @jobs;
 my $xml = new XML::Simple;
 
-sub check_job {
-	@jobs = <$DIR_XML/now/*.xml>;
-	foreach my $thisjob (@jobs) {
-		my $data = $xml->XMLin("$thisjob");
-#		print Dumper($data);
-		my $user = $data->{'data'}->{'user'};
-		my $robot = $data->{'meta'}->{'robot'};
-		my $raw = $data->{'data'}->{'raw'};
-
-		# Call robot.
-		printf STDERR ("%s runs '%s %s'\n", $user, $BOT_PATH . $robot, $raw);
-		if ( -x "$BOT_PATH$robot" ) {
-			system("$BOT_PATH$robot '$raw'");
-			unlink $thisjob;
-		}
-		else
-		{
-			print STDERR "No robot $BOT_PATH$robot found.\n";
-		}
-	}
-}
 
 if (defined $ARGV[0] && $ARGV[0] eq "-d")
 {
@@ -67,13 +41,22 @@ if (defined $ARGV[0] && $ARGV[0] eq "-d")
 	}
 }
 
-my $continue = 1;
-$SIG{TERM} = sub { $continue = 0 };
 
+my $service = Net::DBus->session->export_service("org.opensplash.bot.job");
+my $object = DBus::Trigger->new($service);
+my $reactor = Net::DBus::Reactor->main();
+my $timer = $reactor->add_timeout(
+	50_000,
+	Net::DBus::Callback->new(
+		method => sub {
+#			print STRERR "Check Job\n";
+			SplashBox::Job::Trigger::check_job();
+		},
+	)
+);
 
-while ($continue) {
-	&check_job;
-	sleep 10;
-}
+SplashBox::Job::Trigger::check_job();
+$reactor->run();
 
 print STDERR "Daemon stopped.";
+
