@@ -1,0 +1,89 @@
+#! /usr/bin/perl
+#
+# splashbox-parser0
+#
+# Copyright (c) 2010-2011 The OpenSplash Team
+# http://www.opensplash-project.org/
+#
+# This program is free software; you can redistribute it and/or modify
+# it under the terms of the GNU General Public License as published by
+# the Free Software Foundation; either version 2 of the License, or
+# (at your option) any later version.
+#
+# This program is distributed in the hope that it will be useful,
+# but WITHOUT ANY WARRANTY; without even the implied warranty of
+# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+# GNU General Public License for more details.
+#
+# You should have received a copy of the GNU General Public License
+# along with this program.  If not, see <http://www.gnu.org/licenses/>.
+
+use strict;
+use warnings;
+
+use Net::DBus;
+
+use SplashBox;
+use SplashBox::Language::Parser;
+
+
+sub init {
+	if ( ! -e "$ACTION_PATH" ) {
+		system "mkdir -p $ACTION_PATH";
+	}
+	system "mkdir -p $ACTION_PATH/now";
+	system "mkdir -p $ACTION_PATH/later";
+	system "mkdir -p $ACTION_PATH/routine";
+
+}
+
+
+init();
+
+my @list_action = <$DATA_PATH/action/*.xml>;
+my $action;
+my @list_time = <$DATA_PATH/time/*.xml>;
+my $time;
+my $parser = SplashBox::Language::Parser->new();
+
+my $is_chat_message = 1;
+foreach $action (@list_action) {
+	$action =~ s#.*/##;
+	$action =~ s#\.xml##;
+
+	if ("@ARGV" =~ /\b$action\b/i )
+	{
+		SplashBox::show_log ("Got action='$action'");
+		$is_chat_message = 0;
+		$parser->dispatcher ($action, "@ARGV");
+		last;
+	}
+}
+
+foreach $time (@list_time) {
+	$time =~ s#.*/##;
+	$time =~ s#\.xml##;
+	$time =~ s#_# #;
+
+	if ("@ARGV" =~ /\b$time\b/i )
+	{
+		SplashBox::show_log ("Got time='$time'");
+		last;
+	}
+}
+
+# Pass unknown messages to the chat bot.
+if ( $is_chat_message eq 1 )
+{
+	system("$BOT_PATH/chat \"@ARGV\"");
+}
+
+
+# Trigger to check_job
+my $trigger = Net::DBus->session
+	->get_service('org.opensplash.bot.job')
+	->get_object('/org/opensplash/bot/job/Trigger')
+;
+
+$trigger->check_job();
+
