@@ -2,7 +2,7 @@
 #
 # chat-service
 #
-# Copyright (c) 2010 - The OpenSplash Team
+# Copyright (c) 2010-2011  The OpenSplash Team
 # http://www.opensplash-project.org/
 #
 # This program is free software; you can redistribute it and/or modify
